--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,7 +9,7 @@ body {
 }
 
 .card-title {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
 }
 
 input[type="text"] {
@@ -29,4 +29,16 @@ button.btn-danger {
 
 button.btn-primary {
     background-color: #0d6efd;
+}
+
+#left-container, #right-container {
+    min-height: 500px; /* Example: To ensure both containers have some height */
+}
+
+#center-container {
+    padding-top: 0px;
+}
+
+header {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow to the header */
 }
