--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,6 +12,10 @@ body {
     font-size: 1.4rem;
 }
 
+.fs-6 {
+    font-size: 0.8rem !important;
+}
+
 input[type="text"] {
     border-radius: 10px;
     padding: 10px;
